<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="movie_title">Название фильма</string>
    <string name="movie_description">Описание фильма</string>

    <string name="genre">Жанр:</string>
    <string name="movie_kp_rating">Оценка Кинопоиска:</string>
    <string name="movie_imdb_rating">Оценка IMDB:</string>
    <string name="actors">Актеры</string>
    <string name="movie_staff">Съемочная группа</string>
    <string name="user_note_title">Добавьте свой комментарий</string>
    <string name="user_comment_hint">Оставьте здесь свой комментарий по фильму</string>

    <!-- TextView Titles string -->
    <string name="genres_title">Жанры</string>
    <string name="release_date">Год выхода</string>
    <string name="production_staff_title">Съемочная группа</string>
    <string name="trailer_title">Трейлеры</string>
    <string name="movie_information_title">Информация</string>
    <string name="movie_length">Продолжительность:</string>
    <string name="movie_country">Страна производства </string>
    <string name="movie_budget">Бюджет фильма</string>
    <string name="btn_expand">Подробнее</string>
    <string name="btn_collapse">Скрыть</string>

    <!-- Mock string -->
    <string name="movie_title_mock">Длинное название фильма</string>
    <string name="movie_release_date_mock">ноябрь 2024</string>
    <string name="movie_duration_mock">143 мин</string>
    <string name="chip_genre_horror_mock">Ужасы</string>
    <string name="chip_genre_fantasy_mock">Фантастика</string>
    <string name="rating_mock">5.0</string>
    <string name="votes_number_mock">20,8K</string>
    <string name="trailer_name_mock">Название трейлера</string>
    <string name="movie_genre_mock">Приключение семейный ужастик</string>
    <string name="movie_release_year_mock">2023</string>
    <string name="movie_slogan_mock"> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua." </string>
    <string name="movie_description_mock">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="actor_name_mock">Имя Актера</string>
    <string name="movie_character_name_mock">Имя персонажа</string>

    <!-- Format string -->
    <string name="format_movie_budget"> %1$s %2$s</string>
    <string name="format_movie_length"> %1$s мин</string>
    <string name="youtube_thumbnail_url">https://img.youtube.com/vi/%1$s/0.jpg</string>

    <!-- Error string -->
    <string name="incorrect_movie_id"> Ошибка в получении id фильма</string>
    <string name="error_back_pressed_handler"> Ошибка: Контекст должен реализовать интерфейс BackPressedHandler </string>
    <string name="undefined_date"> Дата неизвестна</string>
    <string name="undefined_budget"> Неизвестный бюджет</string>

</resources>