<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movieDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_16dp_medium">

            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="match_parent"
                android:layout_height="@dimen/poster_view_height"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_movie_title"
                style="@style/movie_title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_12dp_medium"
                android:text="@string/movie_title" />

            <TextView
                android:id="@+id/tv_movie_description"
                style="@style/movie_description_title_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_10dp_small"
                android:text="@string/movie_description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_8dp_small"
                android:orientation="horizontal">

                <TextView
                    style="@style/movie_details_title_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/release_date" />

                <TextView
                    android:id="@+id/tv_movie_release_date"
                    style="@style/movie_details_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8dp_small" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_8dp_small"
                android:orientation="horizontal">

                <TextView
                    style="@style/movie_title_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genre"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_movie_genres"
                    style="@style/movie_details_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8dp_small" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_8dp_small"
                android:orientation="horizontal">

                <TextView
                    style="@style/movie_details_title_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_length" />

                <TextView
                    android:id="@+id/tv_movie_length"
                    style="@style/movie_details_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8dp_small" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_8dp_small"
                android:orientation="horizontal">

                <TextView
                    style="@style/movie_details_title_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_country" />

                <TextView
                    android:id="@+id/tv_movie_country"
                    style="@style/movie_details_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8dp_small" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_8dp_small"
                android:orientation="horizontal">

                <TextView
                    style="@style/movie_details_title_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_budget" />

                <TextView
                    android:id="@+id/tv_movie_budget"
                    style="@style/movie_details_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8dp_small" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/actors"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_8dp_small"
                android:orientation="vertical">

                <TextView
                    style="@style/movie_details_title_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/actors" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_actors"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_persons" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/staff"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/movie_details_title_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8dp_small"
                    android:text="@string/movie_staff" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_movie_staff"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_persons" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_8dp_small"
                android:orientation="horizontal">

                <TextView
                    style="@style/ratings_title_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_kp_rating" />

                <TextView
                    android:id="@+id/tv_movie_kp_rating"
                    style="@style/ratings_title_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8dp_small" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_8dp_small"
                android:orientation="horizontal">

                <TextView
                    style="@style/ratings_title_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_imdb_rating" />

                <TextView
                    android:id="@+id/tv_movie_imdb_rating"
                    style="@style/ratings_title_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8dp_small" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/movie_details_title_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/margin_16dp_medium"
                    android:text="@string/user_note_title" />

                <EditText
                    android:id="@+id/et_user_note"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/comments_zone_height"
                    android:gravity="top|start"
                    android:hint="@string/user_comment_hint"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <FrameLayout
        android:id="@+id/favoriteBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/margin_8dp_small"
            android:layout_marginEnd="@dimen/margin_16dp_medium"
            android:button="@drawable/selector_favorite_item" />

    </FrameLayout>

</RelativeLayout>