<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="uselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/background_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/movie_images_height"
                android:scaleType="fitCenter"
                android:src="@drawable/default_placeholder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="contentDescription" />

            <androidx.cardview.widget.CardView
                android:id="@+id/movie_poster_block"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_24dp_medium"
                android:elevation="@dimen/margin_10dp_small"
                app:cardCornerRadius="@dimen/corner_radius_10dp"
                app:layout_constraintBottom_toBottomOf="@id/chip_release_date"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/movie_poster"
                    android:layout_width="100dp"
                    android:layout_height="150dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/default_placeholder"
                    tools:ignore="contentDescription" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@id/tv_movie_title"
                style="@style/movie_title_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp_medium"
                android:layout_marginTop="@dimen/margin_8dp_small"
                android:gravity="start"
                android:text="@string/movie_title_mock"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/movie_poster_block"
                app:layout_constraintTop_toBottomOf="@id/background_image" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_release_date"
                style="@style/CustomSuggestionChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp_small"
                android:clickable="false"
                android:text="@string/movie_release_date_mock"
                app:layout_constraintStart_toStartOf="@id/tv_movie_title"
                app:layout_constraintTop_toBottomOf="@id/tv_movie_title" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_movie_duration"
                style="@style/CustomSuggestionChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8dp_small"

                android:layout_marginTop="@dimen/margin_8dp_small"
                android:clickable="false"
                android:text="@string/movie_duration_mock"
                app:layout_constraintStart_toEndOf="@id/chip_release_date"
                app:layout_constraintTop_toBottomOf="@id/tv_movie_title" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chip_release_date"
                app:tabMode="scrollable" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/movie_info_view_pager"
                android:layout_width="0dp"
                android:layout_height="300dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tab_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>